# django-project-docker-compose-postgres-template

./: .gitignore  Makefile  README.md  pyproject.toml
docker_compose/: app.yaml  storages.yaml
env/: .env_example
src/config/settings/: local_example.py  main.py
