[tool.poetry]
name = "gametrail"
version = "0.1.0"
description = "GameStore is a comprehensive online video game marketplace"
authors = ["Yegor Belik <yegor.belik.coder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2.13"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
